--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="conten">
+                    <h4>El objetivo de este desafío es poder crear una base donde poder reconocer los nombres de los empleados de una empresa y a estos darles la bienvenida si es que se encuentran en el sistema o informarles que no se encuentran en el mismo en caso de ser contrario.</h4>
+                    <h4>En caso de estar inscripto en el sistema el sistema pide la clave de ingreso la cual si se encuentra dentro del parámetro dado será correcta y sino será incorrecta</h4>
+                </div>
+            </div>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
