--- a/index.html
+++ b/index.html
@@ -4,20 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--CSS-->
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <div class="container">
-            <div class="row">
-                <div class="conten">
-                    <h4>El objetivo de este desafío es poder crear una base donde poder reconocer los nombres de los empleados de una empresa y a estos darles la bienvenida si es que se encuentran en el sistema o informarles que no se encuentran en el mismo en caso de ser contrario.</h4>
-                    <h4>En caso de estar inscripto en el sistema el sistema pide la clave de ingreso la cual si se encuentra dentro del parámetro dado será correcta y sino será incorrecta</h4>
-                </div>
-            </div>
+    <nav>
+        <div class="divcont">
+            <li>Home</li>
+            <li>Reservas</li>
+            <li>Nosotros</li>
         </div>
+    </nav>
+    <main>
+        <section>
+            <div class="piazza">
+                <!--<h3>Bienvenidos a Piazza Ristorante</h3>
+                <p>Momentáneamente nos encontramos haciendo reformas en nuestro sitio..</p>
+                <h5>Vuelve pronto</h5>-->
+            </div>
+        </section>
+        <section class="secImg">
+            <div>
+                <h4>Aquí podrás realizar tus reservas próximamente</h4>
+            </div>
+        </section>    
     </main>
+    <footer>
+
+    </footer>
     <script src="script.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+    new WOW().init();
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
