commit del cambio de codigo, puesta de las prácticas aqui y cambio del proyecto de coder a otra carpeta

--- a/index.html
+++ b/index.html
@@ -4,44 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- BOOTSTRAP -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!--CSS-->
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="style.css">
+    <title>Prácticas | JavaScript</title>
 </head>
 <body>
-    <nav>
-        <div class="divcont">
-            <li>Home</li>
-            <li>Reservas</li>
-            <li>Nosotros</li>
+    <header>
+        <div>
+
         </div>
-    </nav>
-    <main>
-        <section>
-            <div class="piazza">
-                <!--<h3>Bienvenidos a Piazza Ristorante</h3>
-                <p>Momentáneamente nos encontramos haciendo reformas en nuestro sitio..</p>
-                <h5>Vuelve pronto</h5>-->
+    </header>
+    <section class="section1">
+        <div class="div-padre" id="div1">
+            <!--<h3 class="ache">Que pasa aca che</h3>-->
+            <div class="div-hijo" id="divHijo1">
+                <!--<h2>CHEEE</h2>
+                <p id="pe">eeeeeeee</p>-->
             </div>
-        </section>
-        <section class="secImg">
-            <div>
-                <h4>Aquí podrás realizar tus reservas próximamente</h4>
+            <input type="text" class="input-prueba" name="nombrePersona" id="nombrePersona" value="">
+        </div>
+        <div class="div-padre" id="div2">
+            <!--<h4 class="ache">No lo se</h4>-->
+        </div>
+        <div class="div-padre" id="div3">
+            <div class="divHijo2"  id="divHijo2">
+                <!--<p class="p1">Entonces</p>
+                <p class="p1">para que</p>
+                <p class="p1">hablas</p>-->
             </div>
-        </section>    
-    </main>
+            <!--<input type="text" class="input-prueba" name="apellidoPersona" id="apellidoPersona" value="">-->
+        </div>
+        <!--<select id="paises">
+        
+        </select>
+        <ul id="lista">
+
+        </ul>-->
+    </section>
+    <!--<select name="" id="select-producto">
+
+    </select>
+    <input type="text" class="input-prueba" name="otrosDatos" id="otrosDatos" value="">
+
+    <button type="button" id="boton1">Agregar producto</button>
+
+    <button type="button" id="boton-ordenar"></button>
+
+    <button type="button" id="boton-mostrar-todos"></button>
+
+    <form action=""></form>-->
+
+
+    <div id="contenedor"></div>
+
+    <input type="text" value="" id="cantidadDePlatos" disabled>
     <footer>
-
     </footer>
-    <script src="script.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script>
-    new WOW().init();
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
+    <script src="script.js"></script>
 </body>
 </html>
