commit de cambio de pc

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 
     <div id="contenedor"></div>
 
-    <input type="text" value="" id="cantidadDePlatos" disabled>
+    <input type="text" value="" id="cantidadDeProductos" disabled>
+
+    <!-- <input type="text" value="" id="cantidadDePlatos" disabled> -->
+
     <footer>
     </footer>
 
