--- a/index.html
+++ b/index.html
@@ -55,12 +55,24 @@
 
     <div id="contenedor"></div>
 
-    <input type="text" value="" id="cantidadDeProductos" disabled>
+    <button id="button1"> Button 1</button>
+
+    <!-- <input type="text" value="" id="cantidadDeProductos" disabled> -->
 
     <!-- <input type="text" value="" id="cantidadDePlatos" disabled> -->
 
+    <button id="bookingButton"></button>
+    <button id="cancelButton"></button>
+
     <footer>
     </footer>
+
+<!-- LIBRERIAS -->
+<!-- SWEETALERT -->
+<!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
+
+
+
 
     <script src="script.js"></script>
 </body>
